# TicketApp

./: .dockerignore  .gitignore  .sqllsrc.json  Cargo.toml  Dockerfile  README.md  docker-compose-prod.yaml  docker-compose.yaml  package-lock.json  package.json  setup_dev_env.sh  tailwind.config.js
.sqlx/: query-08071799f7e8c71b30f69c38cb1d0fdc535a45e07afe28ca3086f99f0f377cfc.json  query-2d80ff90c5d3c7501c70066f68524a52f417810e5ecac320c497f9dba95ea217.json  query-54897171e0fa16a7c3b373ade258e1addd23f40dc2bf5b81cf47074feb0c0084.json  query-88c900d7c3c7475cc5440dd6b3cae4362a459eedf5afa5dbd6cce8dcdbe00052.json  query-a302ab0860036a8f4b9de2685a261db8d085c3d34feb2ddff78c3a2200004959.json  query-caddbfdf1dac23dd19490ed4c1754e422bd2ac1beb29a3d6865b35edefcfe348.json  query-f39f6393e2106ae82be875ed7114225c6741ed7ccc23af7cba31a0abc30e5ec1.json
configuration/: base.yaml  local.yaml  prod.yaml  production.yaml
images/: Dockerfile_migrator  migrate.sh
migrations/: 20231113225658_create_user_table.sql  20231113225658_initDB.sql  20240407094131_seed.sql
src/: app_state.rs  configuration.rs  lib.rs  main.rs  migration.rs
src/auth/: logout.rs  mod.rs  mw_auth.rs  password.rs  session_key.rs
src/ctx/: mod.rs
src/model/: direction.rs
src/routes/: health_check.rs  home.rs  index.rs  mod.rs
src/routes/login/: get.rs  post.rs
src/routes/logout/: post.rs
src/routes/signup/: get.rs  mod.rs  post.rs
src/routes/ticket/: get.rs  post.rs
src/routes/validate/: email.rs  username.rs
src/templates/: home.rs  login.rs  mod.rs  signup.rs  ticket.rs
src/templates/validation/: form.rs  mod.rs  password.rs  username.rs
templates/: base.html  home.html  index.html  login.html  nav.html  signup.html  user_read.html
templates/macro/: modal.html
templates/validation/: form.html  password.html  username.html
