[package]
name = "ticket_app"
version = "0.1.0"
autors = ["Francesco Luzzi fluzzi3@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ticket_app"

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
askama = "0.12"
# https://github.com/tokio-rs/axum/blob/main/ECOSYSTEM.md
axum = "0.6"
axum-auth = "0.4"
axum-extra = "0.8"
axum_session = { version = "0.8.0", features = [ "postgres-rustls"] }
axum_session_auth = { version = "0.8.0", features = [ "postgres-rustls" ] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0.190"
serde-aux = "4"
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "1.0.50"
tower-cookies = "0.9"
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
validator = { version = "0.16", features = ["derive"] }
