[package]
name = "ticket_app"
version = "0.1.0"
authors = ["Francesco Luzzi fluzzi3@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ticket_app"

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
askama = {version = "0.12", features = ["with-axum"]}
askama_axum = "0.4.0"
# https://github.com/tokio-rs/axum/blob/main/ECOSYSTEM.md
axum = "0.7"
axum-extra = { version = "0.9" }
bb8-redis = "0.15"
config = { version = "0.14", default-features = false, features = ["yaml"] }
chrono = { version = "0.4", features = ["serde"]}
derive_more = "0.99"
hmac = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8.5"
redis = { version = "0.25.0" ,features = ["uuid"]}
secrecy = { version = "0.8", features = ["serde"] }
serde = "1.0.190"
serde-aux = "4"
serde_json = "1"
rust_decimal = { version = "1.26.1", features = ["serde-float"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate","rust_decimal"] }
thiserror = "1.0.50"
tower-cookies = "0.10"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
validator = { version = "0.18", features = ["derive"] }
